Refactoring all code, added support disable attribute, removed 4 list item and added 5 list item in readme file

--- a/CSS/checkbox.css
+++ b/CSS/checkbox.css
@@ -48,4 +48,8 @@
   font-size: 20px;
   font-family: sans-serif;
 }
+
+.Checkbox--disabled {
+  opacity: .4;
+}
 /*# sourceMappingURL=checkbox.css.map */
